--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,13 @@
     "manifest_version": 2,
     "name": "Tinder Right Swipe",
     "version": "1.0",
-    "homepage_url": "https://github.com/anknits/Swipe/tree/master/Swipe",
+    "homepage_url": "https://github.com/anknits/Swipe.git",
     "icons": {
-      "48": "icons/img-48.png"
+      "16": "icons/swipe-icon-16.png",
+      "32": "icons/swipe-icon-32.png",
+      "64": "icons/swipe-icon-64.png",
+      "128": "icons/swipe-icon-128.png",
+      "256": "icons/swipe-icon-256.png"
     },
     "content_scripts": [
       {
