successfully swipe right on loaded tinder page with interval

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "content_scripts": [
       {
         "matches": ["*://*.tinder.com/*"],
-        "js": ["swipe.js"]
+        "js": ["swipe-right.js"]
       }
     ]  
   }
