--- a/1/manifest.json
+++ b/1/manifest.json
@@ -1,5 +1,5 @@
 {
-    "description": "Swipes right on your loaded tinder matches",
+    "description": "Swipes right on 100 of your loaded tinder matches. Requires you to open https://tinder.com and login",
     "manifest_version": 2,
     "name": "Tinder Right Swipe",
     "version": "1.0",
@@ -16,5 +16,5 @@
         "matches": ["*://*.tinder.com/*"],
         "js": ["swipe-right.js"]
       }
-    ]  
+    ]      
   }
